--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build": "nrfconnect-scripts build-prod",
     "lint": "nrfconnect-scripts lint components reducers index.jsx",
     "lintfix": "nrfconnect-scripts lint --fix components reducers index.jsx",
+    "nordic-publish": "nrfconnect-scripts nordic-publish",
     "test": "nrfconnect-scripts test",
     "test-watch": "nrfconnect-scripts test --watch",
     "clean": "npm run clean-dist && npm run clean-modules",
