--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "pc-nrfconnect-devdep": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-devdep.git#semver:^1.3.5",
     "pretty-bytes": "^5.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "electron-store": "^3.0.0"
+  },
+  "bundledDependencies": [
+    "electron-store"
+  ]
 }
