--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pc-nrfconnect-tracecollector",
-  "version": "0.9.0",
+  "version": "0.10.0-alpha.0",
   "description": "Capture modem trace of nRF91",
   "displayName": "Trace Collector",
   "repository": {
@@ -10,7 +10,7 @@
   "author": "Nordic Semiconductor ASA",
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
-    "nrfconnect": "^2.6.0"
+    "nrfconnect": "^2.8.0"
   },
   "main": "dist/bundle.js",
   "files": [
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "check-disk-space": "^1.5.0",
-    "pc-nrfconnect-devdep": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-devdep.git#semver:^1.3.5",
+    "pc-nrfconnect-devdep": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-devdep.git#semver:^3.0.0",
     "pretty-bytes": "^5.1.0"
   },
   "dependencies": {
