--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "webpack": "nrfconnect-scripts build-dev",
     "build": "nrfconnect-scripts build-prod",
     "lint-init": "nrfconnect-scripts lint-init",
-    "lint": "nrfconnect-scripts lint components reducers index.jsx",
-    "lintfix": "nrfconnect-scripts lint --fix components reducers index.jsx",
+    "lint": "nrfconnect-scripts lint lib index.jsx",
+    "lintfix": "nrfconnect-scripts lint --fix lib index.jsx",
     "nordic-publish": "nrfconnect-scripts nordic-publish",
     "test": "nrfconnect-scripts test",
     "test-watch": "nrfconnect-scripts test --watch",
