--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "dist/bundle.js",
   "files": [
     "dist/",
-    "icon.png",
+    "resources/icon.*",
     "LICENSE"
   ],
   "scripts": {
