--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ steps:
     versionSpec: 14
 - script: |
     set -o errexit -o pipefail
-    npm i
+    npm ci
     npm run lint
     npm run build
     npm test
