--- a/package.json
+++ b/package.json
@@ -31,15 +31,14 @@
     },
     "devDependencies": {
         "check-disk-space": "^1.5.0",
-        "pc-nrfconnect-shared": "github:NordicSemiconductor/pc-nrfconnect-shared#v6.0.5",
+        "electron-store": "^8.0.1",
+        "pc-nrfconnect-shared": "github:NordicSemiconductor/pc-nrfconnect-shared#v6.2.2",
         "pretty-bytes": "^5.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-redux": "7.2.5"
     },
-    "dependencies": {
-        "electron-store": "^3.0.0"
-    },
+    "dependencies": {},
     "bundledDependencies": [
         "electron-store"
     ],
