--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
         "check:lint": "eslint --color .",
         "check:types": "check-for-typescript tsc --noEmit --pretty",
         "check:license": "nrfconnect-license check",
-        "nordic-publish": "nordic-publish"
+        "nordic-publish": "nordic-publish",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "check-disk-space": "^1.5.0",
         "electron-store": "^8.0.1",
-        "pc-nrfconnect-shared": "https://github.com/NordicSemiconductor/pc-nrfconnect-shared#v6.2.2",
+        "pc-nrfconnect-shared": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-shared.git#v6.6.0",
         "pretty-bytes": "^5.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
