--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "pc-nrfconnect-tracecollector",
     "version": "1.1.3",
-    "description": "Capture modem trace of nRF91",
     "displayName": "Trace Collector",
+    "description": "Capture nRF91 modem trace",
+    "homepage": "https://github.com/NordicSemiconductor/pc-nrfconnect-tracecollector",
     "repository": {
         "type": "git",
         "url": "https://github.com/NordicSemiconductor/pc-nrfconnect-tracecollector.git"
