--- a/package.json
+++ b/package.json
@@ -33,17 +33,10 @@
     },
     "devDependencies": {
         "check-disk-space": "^1.5.0",
-        "electron-store": "^8.0.1",
-        "pc-nrfconnect-shared": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-shared.git#v6.6.1",
-        "pretty-bytes": "^5.1.0",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "react-redux": "7.2.5"
+        "pc-nrfconnect-shared": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-shared.git#v6.13.1",
+        "pretty-bytes": "^5.1.0"
     },
     "dependencies": {},
-    "bundledDependencies": [
-        "electron-store"
-    ],
     "eslintConfig": {
         "extends": "./node_modules/pc-nrfconnect-shared/config/eslintrc"
     },
