--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pc-nrfconnect-tracecollector",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "displayName": "Trace Collector",
     "description": "Capture nRF91 modem trace",
     "homepage": "https://github.com/NordicSemiconductor/pc-nrfconnect-tracecollector",
@@ -11,7 +11,7 @@
     "author": "Nordic Semiconductor ASA",
     "license": "SEE LICENSE IN LICENSE",
     "engines": {
-        "nrfconnect": "^3.12.0"
+        "nrfconnect": "^3.13.0"
     },
     "main": "dist/bundle.js",
     "files": [
@@ -30,12 +30,13 @@
         "check:lint": "eslint --color .",
         "check:types": "check-for-typescript tsc --noEmit --pretty",
         "check:license": "nrfconnect-license check",
-        "nordic-publish": "nordic-publish",
+        "check:app": "check-app-properties",
+        "nordic-publish": "node ./dist/nordic-publish.js",
         "prepare": "husky install"
     },
     "devDependencies": {
         "check-disk-space": "^1.5.0",
-        "pc-nrfconnect-shared": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-shared.git#v6.13.1",
+        "pc-nrfconnect-shared": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-shared.git#v6.13.2",
         "pretty-bytes": "^5.1.0"
     },
     "dependencies": {},
