--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "author": "Nordic Semiconductor ASA",
     "license": "SEE LICENSE IN LICENSE",
     "engines": {
-        "nrfconnect": "^3.13.0"
+        "nrfconnect": ">=4.0.0"
     },
     "main": "dist/bundle.js",
     "files": [
@@ -35,7 +35,7 @@
     },
     "devDependencies": {
         "check-disk-space": "^1.5.0",
-        "pc-nrfconnect-shared": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-shared.git#v6.13.2",
+        "pc-nrfconnect-shared": "git+https://github.com/NordicSemiconductor/pc-nrfconnect-shared.git#v6.14.3",
         "pretty-bytes": "^5.1.0"
     },
     "dependencies": {},
