Add changelog to files in package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "files": [
         "dist/",
         "resources/icon.*",
+        "Changelog.md",
         "LICENSE"
     ],
     "scripts": {
