--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "pretty-bytes": "^5.1.0"
     },
     "eslintConfig": {
-        "extends": "./node_modules/pc-nrfconnect-shared/config/eslintrc"
+        "extends": "./eslint.config.js"
     },
     "prettier": "./node_modules/pc-nrfconnect-shared/config/prettier.config.js"
 }
