--- a/.github/workflows/zoomin.yml
+++ b/.github/workflows/zoomin.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Copy zoomin properties
-        run: cp doc/zoomin/* .
+        run: cp doc/* .
 
       - name: Create zip file
         run: |
